Refactor (#164)